feat(full): create category
